--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-# Prerequisites
-*.d
 
 # Compiled Object files
-*.slo
-*.lo
-*.o
 *.obj
 
 # Precompiled Headers
@@ -12,21 +7,12 @@
 *.pch
 
 # Compiled Dynamic libraries
-*.so
-*.dylib
 *.dll
-
-# Fortran module files
-*.mod
-*.smod
+*.pdb
 
 # Compiled Static libraries
-*.lai
-*.la
-*.a
 *.lib
+*.ilk
 
 # Executables
 *.exe
-*.out
-*.app
